# smpp_library

./: .gitignore  _clang-format
TO_CHECK_AND_REVISE/client_server_test/: CMakeLists.txt  test.cpp  test.pcap
TO_CHECK_AND_REVISE/include/smpp_server/: asio_generic_server.h  smpp_server.h  smpp_session_handler.h
TO_CHECK_AND_REVISE/include/smpp_session/: smpp_session.h
TO_CHECK_AND_REVISE/src/: smpp_client.cpp
TO_CHECK_AND_REVISE/src/smpp_server/: smpp_session_handler.cpp
smpp/: CMakeLists.txt  TODO.txt  aliases.h  smppconstants.h
smpp/client_server_test/: CMakeLists.txt  async_smpp_server.h  test.cpp  test.pcap
smpp/design/: pdu_design.drawio
smpp/include/: aliases.h  smpp_constants.h  smpp_exceptions.h  smpp_session.h  smppconstants.h  smppexceptions.h  smppsession.h
smpp/include/buffer/: buffer.h
smpp/include/pdu/: base_bind.h  base_bind_resp.h  base_submission_resp.h  base_submit.h  basebind.h  basebindresp.h  bind.h  bind_receiver.h  bind_resp.h  bind_transceiver.h  bind_transmitter.h  bind_transmitter_resp.h  bindreceiver.h  bindtransceiver.h  bindtransmitter.h  bindtransmitterresp.h  pdu.h  pdu_request.h  pdu_response.h  submit_sm.h  submit_sm_resp.h
smpp/include/pdu/builder/: bind_builder.h  bind_resp_builder.h  bind_transmitter_builder.h  bind_transmitter_resp_builder.h  submit_sm_builder.h  submit_sm_resp_builder.h
smpp/include/smpp/: commands.h  smpp_client.h  smpp_constants.h  smpp_exceptions.h  smpp_session.h
smpp/include/smpp/pdu/: base_submission_resp.h  base_submit.h  bind.h  bind_receiver.h  bind_receiver_resp.h  bind_resp.h  bind_transceiver.h  bind_transceiver_resp.h  bind_transmitter.h  bind_transmitter_resp.h  data_sm.h  deliver_sm.h  enquire_link.h  enquire_link_resp.h  generic_nack.h  outbind.h  pdu.h  pdu_request.h  pdu_response.h  submit_multi.h  submit_sm.h  submit_sm_resp.h  unbind.h  unbind_resp.h
smpp/include/smpp/pdu/builder/: bind_builder.h  bind_resp_builder.h  data_sm_builder.h  deliver_sm_builder.h  enquire_link_builder.h  enquire_link_resp_builder.h  generic_nack_builder.h  outbind_builder.h  submit_multi_builder.h  submit_sm_builder.h  submit_sm_resp_builder.h  unbind_builder.h  unbind_resp_builder.h
smpp/include/smpp/smpp_server/: asio_generic_server.h  smpp_server.h  smpp_session_handler.h
smpp/include/smpp/tlv/: tlv.h
smpp/include/smpp/util/: logging.h  serialization_util.h  smpp_session_util.h  smpp_util.h
smpp/include/tlv/: tlv.h
smpp/include/transcoder/: default_pdu_transcoder.h  pdu_transcoder.h
smpp/include/type/: address.h
smpp/include/util/: buffer_util.h  print_util.h  smpp_util.h
smpp/pdu/: basebind.cpp  basebind.h  pdu.cpp  pdu.h  pdu_request.cpp  pdu_request.h
smpp/smpp_client_examples/: CMakeLists.txt  smpp_client_demo.cpp  srv.js
smpp/src/: smpp_client.cpp
smpp/src/buffer/: buffer.cpp
smpp/src/pdu/: base_bind.cpp  base_bind_resp.cpp  base_submission_resp.cpp  base_submit.cpp  basebind.cpp  basebindresp.cpp  bind_receiver.cpp  bind_transceiver.cpp  bind_transmitter.cpp  bind_transmitter_resp.cpp  bindreceiver.cpp  bindtransceiver.cpp  bindtransmitter.cpp  bindtransmitterresp.cpp  data_sm.cpp  deliver_sm.cpp  enquire_link.cpp  enquire_link_resp.cpp  generic_nack.cpp  outbind.cpp  pdu.cpp  pdu_request.cpp  pdu_response.cpp  submit_multi.cpp  submit_sm.cpp  submit_sm_resp.cpp  unbind.cpp  unbind_resp.cpp
smpp/src/pdu/builder/: bind_builder.cpp  bind_resp_builder.cpp  bind_transmitter_builder.cpp  bind_transmitter_resp_builder.cpp  data_sm_builder.cpp  deliver_sm_builder.cpp  enquire_link_builder.cpp  enquire_link_resp_builder.cpp  generic_nack_builder.cpp  outbind_builder.cpp  submit_multi_builder.cpp  submit_sm_builder.cpp  submit_sm_resp_builder.cpp  unbind_builder.cpp  unbind_resp_builder.cpp
smpp/src/smpp_server/: smpp_session_handler.cpp
smpp/src/tlv/: tlv.cpp
smpp/src/transcoder/: default_pdu_transcoder.cpp
smpp/src/type/: address.cpp
smpp/src/util/: buffer_util.cpp  logging.cpp  print_util.cpp  serialization_util.cpp  smpp_session_util.cpp  smpp_util.cpp
smpp/tests/test_serialization_performance/: CMakeLists.txt  test_serialization_performance.cpp
smpp/tlv/: tlv.h
smpp/transcoder/: channel_buffer.cpp  channel_buffer.h  default_pdu_transcoder.cpp  default_pdu_transcoder.h  pdu_transcoder.h
smpp/type/: address.cpp  address.h
smpp/unittests/: CMakeLists.txt  address_test.cpp  main.cpp  pdu_test.cpp  print_util_test.cpp  smpp_util_test.cpp  submit_multi_destination_addresses_test.cpp  tlv_test.cpp
smpp/utests/: CMakeLists.txt  address_test.cpp  buffer_test.cpp  channel_buffer_test.cpp  pdu_test.cpp  print_util_test.cpp  smpp_util_test.cpp  tlv_test.cpp
smpp/util/: channelbuffer_util.cpp  channelbuffer_util.h
utests/: CMakeLists.txt  address_test.cpp  channel_buffer_test.cpp  main.cpp  pdu_test.cpp
